[package]
name = "cryptopals"
version = "0.0.0"
authors = ["Mack Stump <mack@mackstump.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
console = "0.12.0"
indicatif = "0.15.0"
log = "0.4.11"
rand = "0.7.3"
simple_logger = "1.9.0"
rayon = "1.4.1"

crypto = { path = "crypto" }

[workspace]
members = [
    "crypto"
]
