[package]
name = "crypto"
version = "0.1.0"
authors = ["Mack Stump <mack@mackstump.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.2"
aes = "0.7.4"
block-modes = "0.8.1"

[dev-dependencies]
rand = "0.8.3"
