[package]
name = "crypto"
version = "0.1.0"
authors = ["Mack Stump <mack@mackstump.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.9.0"
aes = "0.9.0-rc.0"
cipher = "0.5.0-rc.0"

[dev-dependencies]
rand = "0.9.1"
